--- a/BreakAwayConsole/FluentApiModel/FluentApiModel.csproj
+++ b/BreakAwayConsole/FluentApiModel/FluentApiModel.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Destination.cs" />
+    <Compile Include="InternetSpecial.cs" />
     <Compile Include="Lodging.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
