.gitignore is now working

--- a/BreakAwayConsole/BreakAwayConsole/App.config
+++ b/BreakAwayConsole/BreakAwayConsole/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=BreakAwayDatabase;User ID=kaka;Password=password;Integrated Security=False"
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=BreakAwayDatabase;User ID=sa;Password=123456;Integrated Security=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
