--- a/BreakAwayConsole/Model/Model.csproj
+++ b/BreakAwayConsole/Model/Model.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity.cs" />
     <Compile Include="Destination.cs" />
     <Compile Include="InternetSpecial.cs" />
     <Compile Include="Lodging.cs" />
