Update Code first related to relationship one-one

--- a/BreakAwayConsole/Model/Model.csproj
+++ b/BreakAwayConsole/Model/Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="InternetSpecial.cs" />
     <Compile Include="Lodging.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="PersonPhoto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trip.cs" />
   </ItemGroup>
