Study apply mapping 2 model with 1 table in database

--- a/BreakAwayConsole/FluentApiModel/FluentApiModel.csproj
+++ b/BreakAwayConsole/FluentApiModel/FluentApiModel.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity.cs" />
     <Compile Include="Destination.cs" />
+    <Compile Include="InternetSpecial.cs" />
     <Compile Include="Lodging.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
